@@ -9,10 +9,15 @@ not yet  BJH  Release 10.65.00
               Recognize SIGPWR on systems that have it in messages
               about signal received.
 
-              Fix bug: program hangs if it inherits lots of open files.
+              pnmtops: Fix bug: program hangs if it inherits lots of open
+              files.  Introduced in 10.56 (September 2011).
+
+              pnmtops: Fix bug: fails with message about waitpid() failing
+              if invoked with SIGCHLD ignored.  Introduced in 10.56
+              (September 2011).
 
               Build for big-endian machines: fix syntax error so it compiles.
-              Broken in 10.63 (June 2013).
+              Introduced in 10.63 (June 2013).
 
               Fix compile failure on system such as OpenBSD that don't have
               SIGWINCH and SIGIO.  Broken since 10.49 (December 2009).
